--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -9,24 +9,25 @@
 
 \paragraph{Основные виды и причины возникновения угроз целостности} ~\\
 
-Нарушение целостности информационной базы может произойти по причинам, по которым может произойти и нарушение доступности информации.
-Перечислим основные угрозы целостности информации \autocite{Pirogov2009}:
+Нарушение целостности информационной системы может произойти по разным причинам (включая технические сбои, ошибки конфигурирования, неправильные действия пользователя, преднамеренные атаки), и некоторые из этих причин могут также приводить и к нарушению доступности информации. 
+Эти факторы можно разделить на внутренние (возникающие в рещультате ошибок эксплуатации или ПО) и внешние (обусловлинные воздействием окружающего мира, злоумышленников, технических сбоев).
 
 \begin{enumerate}
 \item \textbf{Внутренние угрозы целостности ИС}.
     \begin{itemize}
-        \item Случайное или умышленное отступление от правил эксплуатации. Например, правила могут предусматривать определенный набор параметров сервера (объем памяти, производительность процессора, объем дискового пространства, версия операционной системы и т.п.), на котором предполагается использовать ИС;
-        \item Выход системы из штатного режима эксплуатации в силу случайных или преднамеренных действий пользователей, администраторов и т.д.;
-        \item Ошибки конфигурирования системы. В сложных системах конфигурирование выполняется при установке и настройке системы;
-        \item Отказ программного обеспечения. Программное обеспечение может содержать ошибки, в том числе и такие, которые могут привести к серьезным повреждениям данных. Кроме этого преднамеренно может быть изменен алгоритм программы. Таким образом, следует защищать программное обеспечение информационной системы и от случайного повреждения, и от исправления непосредственно исполняемых модулей.
+        \item Случайное или умышленное отступление от правил эксплуатации. Например, правила могут предусматривать определенный набор параметров сервера (объем памяти, производительность процессора, объем дискового пространства, версия операционной системы и т.п.), на котором предполагается использовать ИС. Сюда же можно отнести, например, некорректную настройку резервного копирования или преднамеренное отключение логирования.;
+        \item Ошибки конфигурирования системы на этапах установки, обновления, эксплуатации. Например, неправильное (необдуманное) управление правами доступа, незащищенные сетевые интерфейсы и т.д.;
+        \item Отказ программного обеспечения. Может быть вызван ошибками разработки, какими-то некорректными обновлениями, ну или преднамеренными изменениями кода (например, внедрение вредоносного ПО)
+	\item Проблемы управления многопользовательским доступом (состояния гонки, deadlock-ситуации, аномалии уровнеий изоляции транзакций)
     \end{itemize}
 
 \item \textbf{Внешние угрозы целостности ИС}.
     \begin{itemize}
-        \item Нарушение условий работы ИС (проблемы с системами связи, отключения электропитания, отопления и т.п.).
-        \item Разрушение или повреждение помещений, связанное с природными катаклизмами. Конечно, такая ситуация на первый взгляд кажется мало возможной, но это вполне вероятно в регионах, например, с сейсмической неустойчивостью.
-        \item Разрушение информации намеренными действиями человека (диверсия). В данном случае речь идет о действиях людей, не являющихся обслуживающим персоналом данной системы.
-        \item Сетевые атаки, вирусные программы и другое вредоносное программное обеспечение.
+        \item Нарушение условий работы ИС, вызванные сбоями облачных сервисов и/или являющееся следствием зависимости от сторонних провайдеров (проблемы с системами связи, отключения электропитания, отопления и т.п.).
+        \item Разрушение или повреждение помещений, связанное с природными катаклизмами. Конечно, такая ситуация на первый взгляд кажется мало возможной, но это вполне вероятно в регионах, например, с сейсмической неустойчивостью (привет Камчатке).
+        \item Разрушение информации преднамеренными действиями человека злоумышленников или инсайдеров.
+        \item Сетевые атаки, вредоносные программы (к примеру, шифровальщики, модифицирующие данные), SQL-инъекции, атаки на механизмы репликации и т.д.
+	\item Эксплуатация уязвимостей в СУБД, физический доступ к оборудованию.
     \end{itemize}
 \end{enumerate}
 
@@ -34,11 +35,13 @@
 
 Основными средствами защиты целостности информации в ИС являются \autocite{Pirogov2009}:
 \begin{itemize}
-    \item Транзакционные механизмы, позволяющие восстановить целостность данных в случае незначительных сбоев;
-    \item Контроль ввода данных. Много ошибок можно было бы избежать, если программы не пропускали бы заведомо противоречивые данные;
-    \item Использование средств защиты целостности СУБД;
-    \item Резервное копирование данных;
-    \item Периодическое тестирование системы на предмет нарушения целостности.
+    \item Транзакционные механизмы, позволяющие восстановить целостность данных в случае незначительных сбоев, ACID-свойства.;
+    \item Контроль целостности на уровне базы данных. Реализация CHECK, FOREIGN KEY, NOT NULL и триггеров, предтовращающих некорректное изменение данных.;
+    \item Использование WAL (Write-Ahead Logging) - позволят сохранить изменение перед его внесением в основную базу. То есть проще сделать откат транзакции и восстановление данных;
+    \item Резервное копирование данных. Использование PITR (point-in-time recovery), географически распределеная репликация на случай какого-то серьезного сбоя;
+    \item Периодическое тестирование системы на предмет нарушения целостности, анализ логов БД, а также использование IDS с целью попыток выявления попыток несанкционированного изменения данных.
+    \item Использование отказоустойчивых серверов, UPS (системы бесперебойного питания), аппаратных средств шифрования, осуществление контроля доступа к серверному оборудованию.
+
 \end{itemize}
 
 \subsection{Метаданные и словарь данных}
