--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1088,3 +1088,48 @@
 	year={2022},
 	publisher={БНТУ}
 }
+
+@online(nist80012,
+	title={NIST Special Publication 800-12},
+	url={https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-12r1.pdf}
+}
+
+@online{flenovinfo,
+	title={Обеспечение целостности данных},
+	url={https://www.flenov.info/books/read/transact-sql/14?utm_source=chatgpt.com}
+}
+@online{DBtest,
+    title={Тестирование баз данных},
+    author={Jason Boog},
+    url={https://habr.com/ru/companies/otus/articles/804851/},
+    note={Дополнительная ссылка: \url{https://thectoclub.com/data-engineering-testing/ultimate-guide-database-testing/}}
+}
+
+@online{worksol1,
+	title={Как транзакции помогают обеспечить целостность баз данных},
+	url={https://worksolutions.ru/blog/kak-tranzakczii-pomogayut-obespechit-czelostnost-baz-dannyh/?utm_source=chatgpt.com},
+	year={2023}
+}
+
+@online{postgredoc1,
+	title={Transaction Isolation},
+	url={https://www.postgresql.org/docs/current/transaction-iso.html}
+}
+@online{WALintro,
+	title={Журнал предзаписи (WAL)},
+	url={https://postgrespro.ru/docs/postgrespro/9.5/wal-intro}
+}
+
+@online{PITRintro,
+	title={Point in Time Recovery (PITR)},
+	url={https://linx.ru/linxcs-docs/dbs/dbaas/backup/point-in-time-recovery}
+
+@online{tolerance1,
+	title={Отказоустойчивость IT-систем},
+	url={https://www.datahata.by/info/articles/otkazoustojchivost-it-sistem.html}
+}
+
+@online{tolerance2,
+	title={Как обезопасить базу данных},
+	url={https://www.entrust.com/ru/resources/learn/how-to-secure-databases}
+}
