--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -25,7 +25,7 @@
     \begin{itemize}
         \item Нарушение условий работы ИС, вызванные сбоями облачных сервисов и/или являющееся следствием зависимости от сторонних провайдеров (проблемы с системами связи, отключения электропитания, отопления и т.п.).
         \item Разрушение или повреждение помещений, связанное с природными катаклизмами. Конечно, такая ситуация на первый взгляд кажется мало возможной, но это вполне вероятно в регионах, например, с сейсмической неустойчивостью (привет Камчатке).
-        \item Разрушение информации преднамеренными действиями человека злоумышленников или инсайдеров.
+        \item Разрушение информации преднамеренными действиями злоумышленников или инсайдеров.
         \item Сетевые атаки, вредоносные программы (к примеру, шифровальщики, модифицирующие данные), SQL-инъекции, атаки на механизмы репликации и т.д.
 	\item Эксплуатация уязвимостей в СУБД, физический доступ к оборудованию.
     \end{itemize}
