--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1095,9 +1095,10 @@
 }
 
 @online{flenovinfo,
-	title={Обеспечение целостности данных},
-	url={https://www.flenov.info/books/read/transact-sql/14?utm_source=chatgpt.com}
+    title={Обеспечение целостности данных},
+    url={https://www.flenov.info/books/read/transact-sql/14}
 }
+
 @online{DBtest,
     title={Тестирование баз данных},
     author={Jason Boog},
@@ -1106,31 +1107,32 @@
 }
 
 @online{worksol1,
-	title={Как транзакции помогают обеспечить целостность баз данных},
-	url={https://worksolutions.ru/blog/kak-tranzakczii-pomogayut-obespechit-czelostnost-baz-dannyh/?utm_source=chatgpt.com},
-	year={2023}
+    title={Как транзакции помогают обеспечить целостность баз данных},
+    url={https://worksolutions.ru/blog/kak-tranzakczii-pomogayut-obespechit-czelostnost-baz-dannyh/?utm_source=chatgpt.com},
+    year={2023}
 }
 
 @online{postgredoc1,
-	title={Transaction Isolation},
-	url={https://www.postgresql.org/docs/current/transaction-iso.html}
+    title={Transaction Isolation},
+    url={https://www.postgresql.org/docs/current/transaction-iso.html}
 }
+
 @online{WALintro,
-	title={Журнал предзаписи (WAL)},
-	url={https://postgrespro.ru/docs/postgrespro/9.5/wal-intro}
+    title={Журнал предзаписи (WAL)},
+    url={https://postgrespro.ru/docs/postgrespro/9.5/wal-intro}
 }
 
 @online{PITRintro,
-	title={Point in Time Recovery (PITR)},
-	url={https://linx.ru/linxcs-docs/dbs/dbaas/backup/point-in-time-recovery}
+    title={Point in Time Recovery (PITR)},
+    url={https://linx.ru/linxcs-docs/dbs/dbaas/backup/point-in-time-recovery}
 }
 
 @online{tolerance1,
-	title={Отказоустойчивость IT-систем},
-	url={https://www.datahata.by/info/articles/otkazoustojchivost-it-sistem.html}
+    title={Отказоустойчивость IT-систем},
+    url={https://www.datahata.by/info/articles/otkazoustojchivost-it-sistem.html}
 }
 
 @online{tolerance2,
-	title={Как обезопасить базу данных},
-	url={https://www.entrust.com/ru/resources/learn/how-to-secure-databases}
+    title={Как обезопасить базу данных},
+    url={https://www.entrust.com/ru/resources/learn/how-to-secure-databases}
 }
