--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1108,8 +1108,7 @@
 
 @online{worksol1,
     title={Как транзакции помогают обеспечить целостность баз данных},
-    url={https://worksolutions.ru/blog/kak-tranzakczii-pomogayut-obespechit-czelostnost-baz-dannyh/?utm_source=chatgpt.com},
-    year={2023}
+    url={https://worksolutions.ru/blog/kak-tranzakczii-pomogayut-obespechit-czelostnost-baz-dannyh/}
 }
 
 @online{postgredoc1,
