--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1089,7 +1089,7 @@
 	publisher={БНТУ}
 }
 
-@online(nist80012,
+@online{nist80012,
 	title={NIST Special Publication 800-12},
 	url={https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-12r1.pdf}
 }
