fixing bibliography.bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1103,7 +1103,7 @@
 	title={Тестирование баз данных},
 	author={Jason Boog},
 	url={https://habr.com/ru/companies/otus/articles/804851/},
-	note={Дополнительная ссылка: \url{https://thectoclub.com/data-engineering-testing/ultimate-guide-database-testing/}}
+	note={Дополнительная ссылка: https://thectoclub.com/data-engineering-testing/ultimate-guide-database-testing/}
 }
 
 @online{worksol1,
