reverted citation to integrity.tex

--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -33,7 +33,7 @@
 
 \paragraph{Способы противодействия} ~\\
 
-Основными средствами защиты целостности информации в ИС являются:
+Основными средствами защиты целостности информации в ИС являются \autocite{Pirogov2009}:
 \begin{itemize}
     \item Транзакционные механизмы, позволяющие восстановить целостность данных в случае незначительных сбоев, ACID-свойства. \autocite{worksol1, DBtest};
     \item Контроль целостности на уровне базы данных. Реализация CHECK, FOREIGN KEY, NOT NULL и триггеров, предтовращающих некорректное изменение данных. \autocite{flenovinfo};
