Updated a part of 3.2, added bibliography
Updated a part of text a lil

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1103,7 +1103,7 @@
 	title={Тестирование баз данных},
 	author={Jason Boog},
 	url={https://habr.com/ru/companies/otus/articles/804851/},
-	note={Дополнительная ссылка: https://thectoclub.com/data-engineering-testing/ultimate-guide-database-testing/}
+	note={Дополнительная ссылка: \url{https://thectoclub.com/data-engineering-testing/ultimate-guide-database-testing/}}
 }
 
 @online{worksol1,
@@ -1134,4 +1134,27 @@
 @online{tolerance2,
 	title={Как обезопасить базу данных},
 	url={https://www.entrust.com/ru/resources/learn/how-to-secure-databases}
+}
+
+@online{Metadatahabr,
+    title={Мета-данные. На пути к идеалам управления моделями данных.},
+    url={https://habr.com/ru/articles/90528/}
+}
+
+@online{IntuitLec14,
+    title={Базы данных: модели, разработка, реализация. Лекция 14: Обобщенная архитектура СУБД},
+    author={Карпова Т. С.},
+    url={https://intuit.ru/studies/courses/1001/297/lecture/7425},
+    note={Ссылка на книгу целиком : \url{https://intuit.ru/goods_store/ebooks/8415}}
+}
+
+@online{KuznetcovSD,
+    title={Основы современных баз данных - Информационно-аналитические материалы ЦИТ},
+    author={Кузнецов С. Д.},
+    url={https://alexnest.ucoz.ru/_ld/0/37_eoz.pdf}
+}
+
+@online{DictHist,
+    title={История языков программирования: SQL- стандартизация длиною в жизнь},
+    url={https://habr.com/ru/articles/311288/}
 }
