--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1158,3 +1158,44 @@
     title={История языков программирования: SQL- стандартизация длиною в жизнь},
     url={https://habr.com/ru/articles/311288/}
 }
+
+@online{PostgreSQLdocc51,
+    title={PostgreSQL Documentation. Chapter 51. System catalogs},
+    url={https://www.postgresql.org/docs/current/catalogs.html}
+}
+
+@online{HabrDataOrgp1,
+    title={PostgreSQL 16. Организация данных. Часть 1},
+    url={https://habr.com/ru/articles/813781/}
+}
+
+@online{Mysqldoc1,
+    title={MySQL Documentation. Глава 28},
+    url={https://dev.mysql.com/doc/refman/8.4/en/information-schema.html}
+}
+
+@online{YTcoursepostgre,
+    title={DBA1-13. 09. Системный каталог},
+    url={https://www.youtube.com/watch?v=i6NQDPINglc}
+}
+
+@online{IntuitMySQLadm,
+    title={Администрирование MySQL. Лекция 7: Каталог данных MySQL},
+    url={https://intuit.ru/studies/curriculums/14658/courses/165/lecture/4530}
+}
+
+@online{HabrTsql,
+    title={Исследуем базы данных с помощью T-SQL},
+    url={https://habr.com/ru/articles/241079/}
+}
+
+@online{professorweb,
+    title={Transact-SQL. Системный каталог},
+    url={https://professorweb.ru/my/sql-server/2012/level3/3_4.php}
+}
+
+@online{MicrosoftLearnSQLserver,
+    title={Представления системного каталога (Transact-SQL)},
+    url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16}
+}
+
