--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -67,6 +67,93 @@
 
 В \textbf{SQL-92} была стандартизирована структура системного каталога, а точнее представления, объединенные в схему \texttt{INFORMATION\_SCHEMA}. Эта штука в какой-то степени развязала руки разработчикам писать универсальные запросы для получения информации о таблицах, индексах, ограничениях и других объектах БД вне зависимости от конкретной СУБД. Однако на момент принятия стандарта, многие СУБД уже использовали собственные форматы каталогов, и их переход на \texttt{INFORMATION\_SCHEMA} оказался затруднительным.
 
+\paragraph{Реализация системных каталогов в разных СУБД}
+
+Реализация и организация системных каталогов отличаются в зависимости от СУБД.
+
+\begin{enumerate}
+    \item \textbf{PostgreSQL}. \autocite{PostgreSQLdocc51,HabrDataOrgp1,YTcoursepostgre}
+    
+    В PostgreSQL системный каталог — это набор таблиц и представлений, содержащих метаданные обо всех объектах базы данных. Эти таблицы расположены в схеме \texttt{pg\_catalog}, которая по умолчанию включена в путь поиска. То есть можно обращаться к таблицам без явного указания схемы. Примеры таких таблиц: \texttt{pg\_class} (информация о таблицах и представлениях), \texttt{pg\_attribute} (сведения о столбцах) и \texttt{pg\_index} (данные об индексах). \autocite{PostgreSQLdocc51}
+
+    Хотя системные каталоги и являются обычными таблицами, их прямое изменение не рекомендуется, так как это может привести к некорректной работе системы. Для внесения изменений рекомендуется использовать соответствующие SQL-команды, такие как \texttt{CREATE TABLE}, которая автоматически обновляет соответствующие записи в системном каталоге.
+
+    Для получения информации из системного каталога рекомендуется использовать стандартные представления, наподобие \texttt{information\_schema}.
+
+    Подробную информацию о системных каталогах PostgreSQL можно найти в официальной документации. \autocite{PostgreSQLdocc51}
+
+    \item \textbf{MySQL}.
+    
+    В MySQL метаданные о базах данных и их объектах хранятся в специальной базе данных под названием \texttt{information\_schema}. Эта база данных содержит набор представлений, предоставляющих информацию о структурах баз данных (таблицах, столбцах, индексах, привилегиях пользователей).
+
+    Например, представление \texttt{TABLES} в \texttt{information\_schema} содержит информацию обо всех таблицах, их имена, типы и используемые механизмы хранения. Представление \texttt{COLUMNS} дает сведения о столбцах таблиц (имена, типы данных и дополнительные характеристики).
+
+    Доступ к данным в \texttt{information\_schema} осуществляется с помощью стандартных SQL-запросов. Например, получить список всех таблиц в определенной базе данных можно следующим запросом:
+
+    \begin{lstlisting}[language=SQL]
+    SELECT table_name
+    FROM information_schema.tables
+    WHERE table_schema = 'DATABASE_NAME';
+    \end{lstlisting}
+
+    Подробную информацию о структуре и содержимом \texttt{information\_schema} можно найти в официальной документации MySQL. \autocite{Mysqldoc1}
+    
+    Также стоит отметить, что в MySQL физическое хранение данных организовано в виде файловой системы, где каждая база данных представлена как подкаталог в основном каталоге данных сервера. Внутри каждого подкаталога файлы соответствуют таблицам и другим объектам базы данных. \autocite{IntuitMySQLadm}
+
+    \item \textbf{Microsoft SQL Server}. \autocite{MicrosoftLearnSQLserver,professorweb,HabrTsql}
+
+    В Microsoft SQL Server метаданные обо всех объектах базы данных хранятся в системных представлениях каталога, расположенных в схеме \texttt{sys}. Информация этих представлений содержит данные о таблицах, представлениях, столбцах, индексах, ограничениях и прочих объектах БД. Использование системных представлений позволяет администраторам и разработчикам получать структурированную информацию о состоянии БД и её объектах.
+    
+    \subparagraph{Основные представления каталога}
+    
+    Примеры наиболее часто используемых представлений:
+    
+    \begin{itemize}
+        \item \texttt{sys.tables} — информация о всех таблицах в БД (имена, идентификаторы, даты создания);
+        \item \texttt{sys.columns} — сведения о столбцах таблиц (имена, типы данных, порядковые номера);
+        \item \texttt{sys.indexes} — информация об индексах (типы индексов, их назначение);
+        \item \texttt{sys.foreign\_keys} — сведения о внешних ключах (ограничения ссылочной целостности);
+        \item \texttt{sys.database\_principals} — информация о пользователях БД.
+    \end{itemize}
+    
+    \subparagraph{Примеры запросов к системным представлениям}
+    
+    Для получения списка всех таблиц в текущей БД используется SQL-запрос:
+    
+    \begin{lstlisting}[language=SQL]
+    SELECT name 
+    FROM sys.tables;
+    \end{lstlisting}
+    
+    Если необходимо получить список всех столбцов конкретной таблицы:
+    
+    \begin{lstlisting}[language=SQL]
+    SELECT column_name, data_type, is_nullable
+    FROM information_schema.columns
+    WHERE table_name = 'Employees';
+    \end{lstlisting}
+    
+    Для просмотра индексов таблицы:
+    
+    \begin{lstlisting}[language=SQL]
+    SELECT i.name AS IndexName, t.name AS TableName
+    FROM sys.indexes i
+    JOIN sys.tables t ON i.object_id = t.object_id
+    WHERE t.name = 'Employees';
+    \end{lstlisting}
+    
+    \subparagraph{Рекомендации по использованию}
+    
+    Рекомендуется использовать системные представления каталога вместо прямого доступа к системным таблицам, так как представления:
+    
+    \begin{itemize}
+        \item предоставляют стандартизированный интерфейс для получения метаданных;
+        \item обеспечивают обратную совместимость при обновлении версий SQL Server;
+        \item позволяют получать данные в удобном формате без необходимости разбираться во внутренней структуре системы.
+    \end{itemize}
+    
+\end{enumerate}
+
 \paragraph{Типы словарей данных} ~\\
 
 Существует два типа словарей данных. Активные и пассивные, они отличаются уровнем автоматической синхронизации \autocite{DataDictionary}:
